fixed footer spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -161,18 +161,18 @@ footer{
 
   .column1{
     flex: 1; /* Makes each container take up equal space*/
-    width: 20%;
+    width: 32.5%;
   }
 
   .column2{
     flex: 1; /* Makes each container take up equal space*/
-    width: 20%;
+    width: 32.5%;
   }
 
   footer{
     display:block;
     margin:auto;
-    width: 70%;
+    width: 69.5%;
   }
 
 }
